--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Node modules
 node_modules/
+frontend/node_modules/
+server/node_modules/
 
 # Environment variables
 .env
+.env.*
 
 # Logs
 logs/
@@ -10,10 +13,19 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Build output
+frontend/dist/
+server/dist/
 dist/
 build/
+
+# TypeScript
+*.tsbuildinfo
+
+# Vercel
+.vercel/
 
 # OS files
 .DS_Store
@@ -22,14 +34,14 @@ Thumbs.db
 # IDE files
 .vscode/
 .idea/
+*.swp
+*.swo
 
 # Misc
 *.local
 .env.*.local
-
-# Coverage
 coverage/
 
-# Optional: ignore frontend and server node_modules separately
-frontend/node_modules/
-server/node_modules/
+# Ignore local dev files
+*.local.js
+*.local.ts
